add object size measurements